--- a/Ashrae_predict_train.ipynb
+++ b/Ashrae_predict_train.ipynb
@@ -56,6 +56,9 @@
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
         "\n",
+        "!pip install mlxtend\n",
+        "from mlxtend.regressor import StackingRegressor\n",
+        "\n",
         "# Configure GCP project and use gsutil to copy the file from storage\n",
         "\n",
         "!gcloud config set project 'blind-detection'\n",
@@ -513,13 +516,18 @@
       "metadata": {
         "id": "ccRe5dT_Pl-i",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "f5f3aac7-7e21-4192-b9ca-d4fed3827923"
       },
       "source": [
         "from sklearn.model_selection import KFold\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.tree import DecisionTreeRegressor\n",
+        "import lightgbm as lgb\n",
         "\n",
         "# Ensemble modeling\n",
         "\n",
@@ -528,22 +536,61 @@
         "kfold = KFold(n_splits = 5, random_state = seed)\n",
         "# Define base learners and meta-model\n",
         "base_model = RandomForestRegressor()\n",
-        "base_model2 = lgb.LightGBMRegressor()\n",
+        "base_model2 = lgb.LGBMRegressor()\n",
         "base_model3 = DecisionTreeRegressor()\n",
         "\n",
         "meta_model = LinearRegression()\n",
         "\n",
+        "stacking = StackingRegressor([base_model, base_model2, base_model3], meta_model)\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:296: FutureWarning: Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
+            "  FutureWarning\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ItF6-n425Xp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# Cross validation stacking: \n",
-        "# level 1 training\n",
-        "def get_oof(model):\n",
+        "class stacking(model):\n",
         "  '''\n",
         "  Train baseline model on K-1 Fold data, make predictions on out-of-fold data\n",
         "  Assume model is sklearn type\n",
         "  '''\n",
-        "  \n",
-        "  for i, (train_id, valid_id) in enumerate(kfold):\n",
-        "      x_tr = train[train_id]\n",
-        "      y_tr = \n"
+        "  def __init__(self):\n",
+        "    self.model = model\n",
+        "\n",
+        "  def train(self):\n",
+        "      prediction = []\n",
+        "      # CV training on level 1 \n",
+        "      for i, (train_id, valid_id) in enumerate(kfold):\n",
+        "          x_tr = x_train[train_id] # (k-1) fold training data\n",
+        "          y_tr = y_train[train_id]\n",
+        "          x_te = x_train[valid_id] # 1 hold-out-set data for prediction\n",
+        "          # Training on k-1 fold\n",
+        "          model.fit(x_tr, y_tr)\n",
+        "          # prediction on hold-out data\n",
+        "          pred_oof = model.predict(x_te)\n",
+        "          prediction.append(pred_oof)\n",
+        "     \n",
+        "      prediction = np.array(prediction)\n",
+        "      # Training for meta-model in level 2\n",
+        "      model.fit(prediction, y_train)\n",
+        "\n",
+        "  def predict(self):\n",
+        "     "
       ],
       "execution_count": 0,
       "outputs": []
