--- a/Ashrae_predict_train.ipynb
+++ b/Ashrae_predict_train.ipynb
@@ -516,11 +516,11 @@
       "metadata": {
         "id": "ccRe5dT_Pl-i",
         "colab_type": "code",
+        "outputId": "f5f3aac7-7e21-4192-b9ca-d4fed3827923",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "f5f3aac7-7e21-4192-b9ca-d4fed3827923"
+        }
       },
       "source": [
         "from sklearn.model_selection import KFold\n",
@@ -543,7 +543,7 @@
         "\n",
         "stacking = StackingRegressor([base_model, base_model2, base_model3], meta_model)\n"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,6 +554,92 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qt0dKJxsxhym",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Stacking ensemble implemented by: https://www.kaggle.com/mubashir44/simple-ensemble-model-stacking\n",
+        "\n",
+        "\n",
+        "class sklearnhelper(object):\n",
+        "  '''\n",
+        "  Helper that defined sklearn model in a general way, which we can stack them together for ensemble later\n",
+        "  '''\n",
+        "  def __init__(self, estimator, params = None, seed = 0):\n",
+        "    params['random_state'] = seed\n",
+        "    self.estimator = estimator(**params)\n",
+        "\n",
+        "  def train(self, x_train, y_train):\n",
+        "    self.estimator.fit(x_train, y_train)\n",
+        "\n",
+        "  def predict(self, x):\n",
+        "    return self.estimator.predict(x)\n",
+        "\n",
+        "  def feature_importance(self, x, y):\n",
+        "    # print feature importance for model fit with x & y\n",
+        "    print(self.estimator.fit(x, y).feature_importances_)\n",
+        "\n",
+        "n_folds = 5\n",
+        "kfold = sklearn.cross_validation.KFold(x_train, n_folds = 5, random_state = 9)\n",
+        "\n",
+        "def get_oof(estimator, x_train, y_train, x_test):\n",
+        "  '''\n",
+        "  Train data on level 1 baseline model, and return hold-out set prediction for level 2 meta-model\n",
+        "  I don't know why predict x_test in this step\n",
+        "  x_train: train data\n",
+        "  x_test: test data\n",
+        "  '''\n",
+        "  oof_train = np.zeros((1, len(x_train))) # store predictions by base_model for train data\n",
+        "  oof_test = np.zeros((1, len(x_test)))  # overall test data prediction, made by the mean prediction of trained base model on each fold\n",
+        "  oof_test_skf = np.zeros((n_folds, len(x_test))) # test data prediction by trained base model, which is trained by each fold\n",
+        "\n",
+        "  for i, (train_id, valid_id) in enumerate(kfold):\n",
+        "    x_tr = x_train[train_id]\n",
+        "    y_tr = y_train[train_id]\n",
+        "    x_oof = x_train[valid_id] # hold out data\n",
+        "\n",
+        "    estimator.fit(x_tr, y_tr) # train on k-1 fold data\n",
+        "    oof_train[valid_id] = estimator.predict(x_oof) # combine each 1 fold hold-out data into full prediction of train data\n",
+        "    oof_test_skf[i, :] = estimator.predict(x_test)\n",
+        "\n",
+        "  oof_test = oof_test_skf.mean(axis = 0) # mean prediction for each fold trained model\n",
+        "\n",
+        "  return oof_train.reshape((-1, 1)), oof_test.reshape((-1, 1))\n",
+        "\n",
+        "\n",
+        "# Define base model: random forest, adaboost regressor, lightgbm regressor\n",
+        "\n",
+        "rf_param = {\n",
+        "    'n_estimators':50,\n",
+        "    'max_depth':10,\n",
+        "    'verbose':0\n",
+        "}\n",
+        "\n",
+        "seed = 9\n",
+        "rf = sklearnhelper(RandomForestRegressor(), rf_param, seed)\n",
+        "\n",
+        "# Stacking: level 1 base line model training\n",
+        "rf_oof_train, rf_oof_test = get_oof(rf, x_train, y_train, x_test)\n",
+        "\n",
+        "# Stacking: level 2 meta model training\n",
+        "base_prediction = pd.DataFrame({'RandomForest':\n",
+        "                                rf_oof_train.ravel(),\n",
+        "                                })\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
