--- a/Ashrae_predict_train.ipynb
+++ b/Ashrae_predict_train.ipynb
@@ -623,13 +623,35 @@
         "seed = 9\n",
         "rf = sklearnhelper(RandomForestRegressor(), rf_param, seed)\n",
         "\n",
+        "lgb_param = {\n",
+        "    'n_estimators':400,\n",
+        "    'num_leaves':40\n",
+        "}\n",
+        "\n",
+        "lgbm = lgb.LGBMRegressor(lgb_param, random_state = seed)\n",
+        "\n",
         "# Stacking: level 1 base line model training\n",
         "rf_oof_train, rf_oof_test = get_oof(rf, x_train, y_train, x_test)\n",
+        "lgb_oof_train, lgb_oof_test = get_oof(lgbm, x_train, y_train, x_test)\n",
         "\n",
         "# Stacking: level 2 meta model training\n",
         "base_prediction = pd.DataFrame({'RandomForest':\n",
         "                                rf_oof_train.ravel(),\n",
         "                                })\n",
+        "\n",
+        "\n",
+        "# metao model input: concatenate the predictions from baseline model\n",
+        "x_meta = np.concatenate((rf_oof_train, lgb_oof_train), axis = 1) \n",
+        "y_meta = y_train\n",
+        "meta_test = np.concatenate((rf_oof_test, lgb_oof_test), axis = 1)\n",
+        "\n",
+        "meta_model = sklearn.linear_model.LinearRegression()\n",
+        "# Train meta model\n",
+        "meta_model.fit(x_meta, y_meta)\n",
+        "\n",
+        "final_predict = meta_model.predict(x_test)\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
