--- a/Ashrae_predict_train.ipynb
+++ b/Ashrae_predict_train.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "j9Vn9mfylThK",
         "colab_type": "code",
-        "outputId": "be1764fa-66a7-4f58-9370-ba8e7ce334a1",
+        "outputId": "0458e91d-6b9b-4f80-b0f6-cfdc1b490a52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 435
@@ -71,27 +71,27 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: mlxtend in /usr/local/lib/python3.6/dist-packages (0.14.0)\n",
-            "Requirement already satisfied: scipy>=0.17 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (1.4.1)\n",
-            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (1.17.5)\n",
-            "Requirement already satisfied: scikit-learn>=0.18 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (0.22.1)\n",
             "Requirement already satisfied: pandas>=0.17.1 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (0.25.3)\n",
+            "Requirement already satisfied: scipy>=0.17 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (1.4.1)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from mlxtend) (42.0.2)\n",
+            "Requirement already satisfied: scikit-learn>=0.18 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (0.22.1)\n",
             "Requirement already satisfied: matplotlib>=1.5.1 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (3.1.2)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.18->mlxtend) (0.14.1)\n",
+            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.6/dist-packages (from mlxtend) (1.17.5)\n",
             "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.17.1->mlxtend) (2.6.1)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.17.1->mlxtend) (2018.9)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.18->mlxtend) (0.14.1)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->mlxtend) (0.10.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->mlxtend) (1.1.0)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->mlxtend) (2.4.6)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.17.1->mlxtend) (1.12.0)\n",
             "Updated property [core/project].\n",
-            "Copying gs://ashare_dataset/sample_submission.csv...\n",
             "Copying gs://ashare_dataset/building_metadata.csv...\n",
+            "Copying gs://ashare_dataset/sample_submission.csv...\n",
             "Copying gs://ashare_dataset/train.csv...\n",
-            "Copying gs://ashare_dataset/weather_train.csv...\n",
-            "Copying gs://ashare_dataset/weather_test.csv...\n",
             "Copying gs://ashare_dataset/test.csv...\n",
-            "/ [6/6 files][  2.4 GiB/  2.4 GiB] 100% Done  48.9 MiB/s ETA 00:00:00           \n",
+            "Copying gs://ashare_dataset/weather_test.csv...\n",
+            "Copying gs://ashare_dataset/weather_train.csv...\n",
+            "| [6/6 files][  2.4 GiB/  2.4 GiB] 100% Done  64.5 MiB/s ETA 00:00:00           \n",
             "Operation completed over 6 objects/2.4 GiB.                                      \n"
           ],
           "name": "stdout"
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "xbKLd8hpOV4m",
         "colab_type": "code",
-        "outputId": "211969d8-6068-41ec-f3f1-70f729a77eed",
+        "outputId": "2a2efeea-a4fd-489c-e98c-5fb2982aaa9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 314
@@ -223,7 +223,7 @@
       "metadata": {
         "id": "CXBxv4GcLzxQ",
         "colab_type": "code",
-        "outputId": "df4df7e1-b52c-41cc-a94c-872994c819a4",
+        "outputId": "8f4c737f-8e93-4a5e-b138-45b587995af0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 259
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "bxRKgp-QaW1a",
         "colab_type": "code",
-        "outputId": "53dbe262-2bde-475f-99be-b8b35601985b",
+        "outputId": "73509a3e-86a6-4532-bb0e-e24f929eee05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -493,7 +493,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f2077c0f-81c6-436c-a79e-fa21d29cd063"
+        "outputId": "578adde5-a257-47dc-e6eb-083028f37cf8"
       },
       "source": [
         "y_train = train['meter_reading']\n",
@@ -522,11 +522,15 @@
       "metadata": {
         "id": "ccRe5dT_Pl-i",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "97748648-57c0-49c8-d5b5-98895f876ade",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
       },
       "source": [
         "# Boosting model\n",
-        "\n",
+        "'''\n",
         "x_tr, x_val, y_tr, y_val = train_test_split(x_train, y_train, test_size = 0.2, \n",
         "                                            random_state = 9)\n",
         "\n",
@@ -536,32 +540,6 @@
         "    'num_leaves':40\n",
         "}\n",
         "\n",
-        "lgb0 = lgb.LGBMRegressor(params\n",
-        "                         )\n",
-        "\n",
-        "lgb0.fit(x_tr, y_tr,\n",
-        "         eval_metric = 'mae',\n",
-        "         eval_set = (x_val, y_val),\n",
-        "         early_stopping_rounds = 100,\n",
-        "         verbose = 50)\n",
-        "\n",
-        "gc.collect()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nhxsLLXJQNum",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
-        },
-        "outputId": "ba063e74-265a-4461-edad-1f4b80958d74"
-      },
-      "source": [
         "lgb0 = lgb.LGBMRegressor(**params\n",
         "                         )\n",
         "\n",
@@ -571,38 +549,22 @@
         "         early_stopping_rounds = 100,\n",
         "         verbose = 50)\n",
         "\n",
-        "gc.collect()"
+        "gc.collect()\n",
+        "'''"
       ],
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Training until validation scores don't improve for 100 rounds.\n",
-            "[50]\tvalid_0's l1: 0.961707\tvalid_0's l2: 1.89192\n",
-            "[100]\tvalid_0's l1: 0.857458\tvalid_0's l2: 1.57749\n",
-            "[150]\tvalid_0's l1: 0.795146\tvalid_0's l2: 1.40189\n",
-            "[200]\tvalid_0's l1: 0.747202\tvalid_0's l2: 1.27137\n",
-            "[250]\tvalid_0's l1: 0.710961\tvalid_0's l2: 1.1792\n",
-            "[300]\tvalid_0's l1: 0.681345\tvalid_0's l2: 1.10051\n",
-            "[350]\tvalid_0's l1: 0.655748\tvalid_0's l2: 1.02977\n",
-            "[400]\tvalid_0's l1: 0.635627\tvalid_0's l2: 0.984963\n",
-            "Did not meet early stopping. Best iteration is:\n",
-            "[400]\tvalid_0's l1: 0.635627\tvalid_0's l2: 0.984963\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "620"
+              "\"\\nx_tr, x_val, y_tr, y_val = train_test_split(x_train, y_train, test_size = 0.2, \\n                                            random_state = 9)\\n\\nparams = {\\n    'n_estimators':400,\\n    'max_depth':30,\\n    'num_leaves':40\\n}\\n\\nlgb0 = lgb.LGBMRegressor(**params\\n                         )\\n\\nlgb0.fit(x_tr, y_tr,\\n         eval_metric = 'mae',\\n         eval_set = (x_val, y_val),\\n         early_stopping_rounds = 100,\\n         verbose = 50)\\n\\ngc.collect()\\n\""
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 8
         }
       ]
     },
@@ -613,16 +575,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 411
+          "height": 72
         },
-        "outputId": "c1537336-3ba1-418d-84cf-45fa74d5bdcc"
+        "outputId": "60ed1bbb-2e97-461c-8565-0789cbcdf1aa"
       },
       "source": [
         "# Stacking ensemble implemented by: https://www.kaggle.com/mubashir44/simple-ensemble-model-stacking\n",
         "from sklearn.ensemble import ExtraTreesRegressor, RandomForestRegressor\n",
         "\n",
-        "x_tr, x_val, y_tr, y_val = train_test_split(x_train, y_train, test_size = 0.2, \n",
-        "                                            random_state = 10)\n",
+        "\n",
         "\n",
         "\n",
         "class sklearnhelper(object):\n",
@@ -650,8 +611,8 @@
         "  '''\n",
         "  Train data on level 1 baseline model, and return hold-out set prediction for level 2 meta-model\n",
         "  I don't know why predict x_test in this step\n",
-        "  x_train: train data\n",
-        "  x_test: test data\n",
+        "  x_train: DataFrame, train data\n",
+        "  x_test: DataFrame, test data\n",
         "  '''\n",
         "  oof_train = np.zeros((len(x_train),)) # store predictions by base_model for train data\n",
         "  oof_test = np.zeros((len(x_test),))  # mean test data prediction by single base model\n",
@@ -659,11 +620,11 @@
         "\n",
         "  i = 0\n",
         "  for train_id, valid_id in kfold.split(x_train):\n",
-        "    x_tr = x_train[train_id]\n",
-        "    y_tr = y_train[train_id]\n",
-        "    x_oof = x_train[valid_id] # hold out data\n",
+        "    x_tr = x_train.iloc[train_id]\n",
+        "    y_tr = y_train.iloc[train_id]\n",
+        "    x_oof = x_train.iloc[valid_id] # hold out data\n",
         "\n",
-        "    estimator.fit(x_tr, y_tr) # train on k-1 fold data\n",
+        "    estimator.train(x_tr, y_tr) # train on k-1 fold data\n",
         "    oof_train[valid_id] = estimator.predict(x_oof) # combine each 1 fold hold-out data into full prediction of train data\n",
         "    oof_test_skf[i, :] = estimator.predict(x_test)\n",
         "    i += 1\n",
@@ -698,14 +659,14 @@
         "\n",
         "# Define level 0 base model\n",
         "seed = 9\n",
-        "rf = sklearnhelper(RandomForestRegressor(), rf_param, seed)\n",
+        "rf = sklearnhelper(RandomForestRegressor, rf_param, seed)\n",
         "lgbm = lgb.LGBMRegressor(**lgb_param, random_state = seed)\n",
-        "et = sklearnhelper(ExtraTreeRegressor(), et_param, seed)\n",
+        "et = sklearnhelper(ExtraTreesRegressor, et_param, seed)\n",
         "\n",
         "# Stacking: level 1 base line model training\n",
-        "rf_oof_train, rf_oof_test = get_oof(rf, x_train, y_train, x_test)\n",
-        "lgb_oof_train, lgb_oof_test = get_oof(lgbm, x_train, y_train, x_test)\n",
-        "et_oof_train, et_oof_test = get_oof(et, x_train, y_train, x_test)\n",
+        "rf_oof_train, rf_oof_test = get_oof(rf, x_train, y_train, test)\n",
+        "lgb_oof_train, lgb_oof_test = get_oof(lgbm, x_train, y_train, test)\n",
+        "et_oof_train, et_oof_test = get_oof(et, x_train, y_train, test)\n",
         "\n",
         "# metao model input: concatenate the predictions from baseline model\n",
         "x_meta = np.concatenate((rf_oof_train, lgb_oof_train, et_oof_train), axis = 1) \n",
@@ -721,6 +682,9 @@
         "\n",
         "meta_model = lgb.LGBMRegressor(**lgb_param)\n",
         "\n",
+        "x_tr, x_val, y_tr, y_val = train_test_split(x_train, y_train, test_size = 0.2, \n",
+        "                                            random_state = 10)\n",
+        "\n",
         "# Train meta model\n",
         "meta_model.fit(x_meta, y_meta,\n",
         "               eval_metric = 'mae',\n",
@@ -732,7 +696,7 @@
         "\n",
         "gc.collect()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,33 +705,8 @@
             "  FutureWarning\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-e65c04cab120>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;31m# Define level 0 base model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m \u001b[0mrf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msklearnhelper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRandomForestRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrf_param\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0mlgbm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLGBMRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mlgb_param\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0met\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msklearnhelper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mExtraTreeRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0met_param\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-15-e65c04cab120>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, estimator, params, seed)\u001b[0m\n\u001b[1;32m     11\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'random_state'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'RandomForestRegressor' object is not callable"
-          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JTlqmj-eUXMV",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "rf = RandomForestRegressor(**rf_param)"
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
